02/16/2005  version 0.3 pre11   Ian Lewis <IanLewis@member.fsf.org>

    * jsXe now loads plugins from both ~/.jsxe/jars and the install
      directory.
    * Added the soft tabs property to the document options.

01/18/2005  version 0.3 pre10   Ian Lewis <IanLewis@member.fsf.org>

    * Added some new functionality for action plugins to add menu items
      to the tools menu.
    * Added a method to XMLDocument that allows you to get a copy of the
      underlying Document object.

01/08/2005  version 0.3 pre9    Ian Lewis <IanLewis@member.fsf.org>

    * Finished the plugin manager dialog.

01/06/2005  version 0.3 pre8    Ian Lewis <IanLewis@member.fsf.org>

    * Added the beginnings of a plugin manager dialog.

01/05/2005  version 0.3 pre7    Ian Lewis <IanLewis@member.fsf.org>

    * Tweaked the plugin interface to eliminate some redundant methods.

12/10/2004  version 0.3 pre6    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug that tried to create a new instance of a main class
      even if the jar wasn't a plugin
    * Updated logic to created the options panels for plugins
    * Updated the XMLDocumentListener again

12/08/2004  version 0.3 pre5    Ian Lewis <IanLewis@member.fsf.org>

    * Updated the ant build document.
    * jsXe now loads a plugin's properties
    * Added support for ActionPlugins

12/07/2004  version 0.3 pre4    Ian Lewis <IanLewis@member.fsf.org>

    * Added view plugin support. Branched off the views into their own
      source trees.
    * Updated the Tree view to be a plugin

11/30/2004  version 0.3 pre3    Ian Lewis <IanLewis@member.fsf.org>

    * Added some more code for the SchemaView. jsXe will require JGraph for a
      bit, until views become plugins and are moved into their own jars.
    * Added some code for loading plugins
    * Added new interfaces for the plugin API. The plugin API will have
      ViewPlugins and ActionPlugins. ActionPlugins are plugins that add actions